fix(styles): menu command with & without icons aren't aligned - add a `$slick-menu-icon-min-width` to align icon containers so that they are always aligned with and without icons

--- a/packages/common/src/styles/_variables.scss
+++ b/packages/common/src/styles/_variables.scss
@@ -365,6 +365,7 @@ $slick-menu-icon-font-size:                                 $slick-icon-font-siz
 $slick-menu-icon-line-height:                               calc(#{$slick-menu-icon-font-size} + 2px) !default;
 $slick-menu-item-width-when-button:                         calc(100% - #{$slick-menu-close-btn-width}) !default;
 $slick-menu-icon-margin-right:                              4px !default;
+$slick-menu-icon-min-width:                                 16px !default;
 $slick-menu-icon-width:                                     16px !default;
 $slick-menu-line-height:                                    24px !default;
 $slick-menu-min-width:                                      140px !default;
